Fix lost animations, fix menu on small devices

--- a/src/sass/components/_blog-slider.scss
+++ b/src/sass/components/_blog-slider.scss
@@ -26,6 +26,7 @@
       height: 13px;
       border-radius: 6px;
       background-color: $dot-bg;
+      @extend .animation-transition;
 
       &.active,
       &:hover {
