--- a/src/sass/components/_products-slider.scss
+++ b/src/sass/components/_products-slider.scss
@@ -26,6 +26,7 @@
       height: 13px;
       border-radius: 6px;
       background-color: $dot-bg;
+      @extend .animation-transition;
 
       &.active,
       &:hover {
@@ -35,6 +36,13 @@
 
     .is-selected {
       background-color: $primary;
+    }
+  }
+}
+@include media-breakpoint-down(md) {
+  .products-slider {
+    .flickity-page-dots {
+      display: none;
     }
   }
 }
